Your commit message here

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <div class="section__container header__container">
       <h1>In search of the true self around the world</h1>
       <h4>Explore the colourful world</h4>
-      <button type="button" onclick="location.href='http://localhost:3000 '" class="box">
+      <button type="button" onclick="window.location.href='login/index.html'" class="box">
         <h3>Login</h3>
-      </button>
+    </button>
+    
 
 
     </div>
@@ -61,7 +62,7 @@
 
       </div>
       <div class="about__image">
-        <img src="assets/about.jpg" alt="about" />
+        <img src="website/assets/about.jpg" alt="about" />
       </div>
     </div>
   </section>
@@ -139,7 +140,7 @@
   chat-title="NewAgent"
   agent-id="2cf48086-d530-477d-a5bc-a88c78fa323e"
   language-code="en"
-  chat-icon="./assets/chatbot.jpg" 
+  chat-icon="website/assets/chatbot.jpg" 
 ></df-messenger>
 
 
@@ -151,35 +152,35 @@
       </p>
       <div class="gallery__grid">
         <div class="gallery__card">
-          <img src="assets/gallery-1.jpg" alt="gallery" />
+          <img src="website/assets/gallery-1.jpg" alt="gallery" />
           <div class="gallery__content">
             <h4>Northern Lights</h4>
             <p>Norway</p>
           </div>
         </div>
         <div class="gallery__card">
-          <img src="assets/gallery-2.jpg" alt="gallery" />
+          <img src="website/assets/gallery-2.jpg" alt="gallery" />
           <div class="gallery__content">
             <h4>Krabi</h4>
             <p>Thailand</p>
           </div>
         </div>
         <div class="gallery__card">
-          <img src="assets/gallery-3.jpg" alt="gallery" />
+          <img src="website/assets/gallery-3.jpg" alt="gallery" />
           <div class="gallery__content">
             <h4>Bali</h4>
             <p>Indonesia</p>
           </div>
         </div>
         <div class="gallery__card">
-          <img src="assets/gallery-4.jpg" alt="gallery" />
+          <img src="website/assets/gallery-4.jpg" alt="gallery" />
           <div class="gallery__content">
             <h4>Tokyo</h4>
             <p>Japan</p>
           </div>
         </div>
         <div class="gallery__card">
-          <img src="assets/gallery-5.jpg" alt="gallery" />
+          <img src="website/assets/gallery-5.jpg" alt="gallery" />
           <div class="gallery__content">
             <h4>Taj Mahal</h4>
             <p>India</p>
